--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 
     <main class="graficos-section">
     <section id="graficos-container">
-       // crie os graficos aqui
+       <!-- crie os graficos aqui -->
     </section>
 
     </main>
     <footer>
      <p> desenvolvido por sabrina paiva</p>
     </footer>
-    
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuario.js"></script>
+    <script type="module" src="graficos/commons.js"></script>
 </body>
 </html>
